Fixed validation for phone numbers and presence of first and last names on registration. Added style to password creation page to fix overlapping headers.

--- a/app/assets/stylesheets/bootstagram/home.css.scss
+++ b/app/assets/stylesheets/bootstagram/home.css.scss
@@ -180,3 +180,7 @@ a.user-admin-link {
 .jumbotron h1 {
   padding-top: 40px;
 }
+
+.register {
+  padding-top: 50px;
+}
